--- a/vercel.json
+++ b/vercel.json
@@ -12,7 +12,7 @@
     "env": {
       "APP_ENV": "production",
       "APP_DEBUG": "true",
-      "APP_URL": "https://agroinsight.vercel.app",
+      "APP_URL": "https://agro2-git-main-nyaindas-projects.vercel.app",
       "APP_CONFIG_CACHE": "/tmp/config.php",
       "APP_EVENTS_CACHE": "/tmp/events.php",
       "APP_PACKAGES_CACHE": "/tmp/packages.php",
