--- a/.env
+++ b/.env
@@ -10,12 +10,14 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 
-DB_CONNECTION=pgsql
-DB_HOST=127.0.0.1
-DB_PORT=5432
-DB_DATABASE=java
-DB_USERNAME=postgres
-DB_PASSWORD=12345678
+POSTGRES_URL="postgres://default:JaArXDHL9M8Y@ep-ancient-leaf-a4rphd63-pooler.us-east-1.aws.neon.tech:5432/verceldb?sslmode=require"
+POSTGRES_PRISMA_URL="postgres://default:JaArXDHL9M8Y@ep-ancient-leaf-a4rphd63-pooler.us-east-1.aws.neon.tech:5432/verceldb?sslmode=require&pgbouncer=true&connect_timeout=15"
+POSTGRES_URL_NO_SSL="postgres://default:JaArXDHL9M8Y@ep-ancient-leaf-a4rphd63-pooler.us-east-1.aws.neon.tech:5432/verceldb"
+POSTGRES_URL_NON_POOLING="postgres://default:JaArXDHL9M8Y@ep-ancient-leaf-a4rphd63.us-east-1.aws.neon.tech:5432/verceldb?sslmode=require"
+POSTGRES_USER="default"
+POSTGRES_HOST="ep-ancient-leaf-a4rphd63-pooler.us-east-1.aws.neon.tech"
+POSTGRES_PASSWORD="JaArXDHL9M8Y"
+POSTGRES_DATABASE="verceldb"
 
 
 BROADCAST_DRIVER=log
