--- a/.env
+++ b/.env
@@ -10,14 +10,12 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 
-POSTGRES_URL="postgres://default:JaArXDHL9M8Y@ep-ancient-leaf-a4rphd63-pooler.us-east-1.aws.neon.tech:5432/verceldb?sslmode=require"
-POSTGRES_PRISMA_URL="postgres://default:JaArXDHL9M8Y@ep-ancient-leaf-a4rphd63-pooler.us-east-1.aws.neon.tech:5432/verceldb?sslmode=require&pgbouncer=true&connect_timeout=15"
-POSTGRES_URL_NO_SSL="postgres://default:JaArXDHL9M8Y@ep-ancient-leaf-a4rphd63-pooler.us-east-1.aws.neon.tech:5432/verceldb"
-POSTGRES_URL_NON_POOLING="postgres://default:JaArXDHL9M8Y@ep-ancient-leaf-a4rphd63.us-east-1.aws.neon.tech:5432/verceldb?sslmode=require"
-POSTGRES_USER="default"
-POSTGRES_HOST="ep-ancient-leaf-a4rphd63-pooler.us-east-1.aws.neon.tech"
-POSTGRES_PASSWORD="JaArXDHL9M8Y"
-POSTGRES_DATABASE="verceldb"
+DB_CONNECTION=pgsql
+DB_HOST=ep-ancient-leaf-a4rphd63-pooler.us-east-1.aws.neon.tech
+DB_PORT=5432
+DB_DATABASE=verceldb
+DB_USERNAME=default
+DB_PASSWORD=JaArXDHL9M8Y
 
 
 BROADCAST_DRIVER=log
